--- a/projet/formulaire/package.json
+++ b/projet/formulaire/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "formulaire-backend",
+  "version": "1.0.0",
+  "main": "serveur.js",
   "scripts": {
     "start": "node serveur.js"
   },
@@ -6,7 +9,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemailer": "^7.0.3",
-    "railway": "^2.0.17"
+    "nodemailer": "^7.0.3"
   }
 }
